# kafka-delta-ingest

./: '  .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.Debian  Dockerfile.setup  LICENSE.txt  Makefile  NOTES.md  README.adoc  build.rs  docker-compose-with-statsd.yml  docker-compose.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: CI.yml  build.yml  release.yml
benches/: filters.rs
contrib/: Dockerfile.data_loader  Dockerfile.setup  docker-compose-with-statsd.yml
data/delta/checkpoint/: .metadata.crc  metadata
data/delta/checkpoint/offsets/: .0.crc  0
data/delta/checkpoint/sources/0/: .0.crc  0
doc/: DESIGN.md  HACKING.adoc  OFFSET_HANDLING.adoc
kafka-delta-ingest/: Cargo.toml
kafka-delta-ingest-wasm/: Cargo.toml
kafka-delta-ingest-wasm-sdk/: Cargo.toml  build.rs
kafka-delta-ingest-wasm-sdk/src/: allocator.rs  dispatcher.rs  hostcalls.rs  lib.rs  traits.rs  types.rs
kafka-delta-ingest-wasm/src/: lib.rs
kafka-delta-ingest-wasm/tests/: proxy_sample.wat  proxy_sample_failure.wat
kafka-delta-ingest/src/: coercions.rs  cursor.rs  dead_letters.rs  delta_helpers.rs  lib.rs  main.rs  metrics.rs  offsets.rs  serialization.rs  value_buffers.rs  writer.rs
kafka-delta-ingest/src/transforms/: mod.rs
kafka-delta-ingest/tests/: buffer_flush_tests.rs  dead_letter_tests.rs  delta_partitions_tests.rs  deserialization_tests.rs  emails_azure_blob_tests.rs  end_at_last_offsets_test.rs  playground.rs  zero_offset_issue_tests.rs
kafka-delta-ingest/tests/data/: default_schema.avro
kafka-delta-ingest/tests/helpers/: mod.rs
src/: coercions.rs  consumer.rs  cursor.rs  dead_letters.rs  delta_helpers.rs  delta_writer.rs  deltalake_ext.rs  errors.rs  instrumentation.rs  kafka.rs  kafka_delta_ingest.rs  lib.rs  main.rs  message_buffers.rs  metrics.rs  offsets.rs  processing.rs  recover_dynamodb_lock.rs  serialization.rs  settings.rs  starting_offsets.rs  transforms.rs  util.rs  value_buffers.rs  write_ahead_log.rs  writer.rs
src/filters/: error.rs  filter.rs  filter_factory.rs  mod.rs
src/filters/jmespath_filter/: custom_functions.rs  filter.rs  mod.rs
src/filters/naive_filter/: error.rs  filter.rs  mod.rs  operand.rs  operator.rs
src/serialization/: avro.rs  mod.rs
src/write_ahead_log/: dynamodb.rs  mod.rs
tests/: buffer_flush_tests.rs  checkpoint_bug_tests.rs  coercions_tests.rs  dead_letter_tests.rs  delta_partitions_tests.rs  deserialization_tests.rs  emails_azure_blob_tests.rs  emails_s3_tests.rs  end_at_last_offsets_test.rs  feed_s3_tests.rs  integration_tests.rs  offset_tests.rs  parquet_stats.rs  playground.rs  recover_dynamodb_lock_test.rs  schema_update_tests.rs  starting_offset_tests.rs  stats_exploration.rs  utils.rs  write_ahead_log_tests.rs  zero_offset_issue.rs  zero_offset_issue_tests.rs
tests/data/: .gitignore
tests/data/zero_offset/color=default/: part-00000-905cbb15-ede9-4f5c-8ee1-4bf507482a76-c000.snappy.parquet
tests/helpers/: mod.rs
tests/json/: web_requests-100.json
