[package]
name = "kafka-delta-ingest"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>", "Christian Williams <christianw@scribd.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
apache-avro = "^0.14"
base64 = "0.13"
bytes = "1"
chrono = "0.4.31"
clap = { version = "4", features = ["color"] }
dipstick = "0.9"
env_logger = "0"
futures = "0.3"
jmespatch = { version = "0.3", features = ["sync"] }
lazy_static = "1"
log = "0"
maplit = "1"
rdkafka = { version = "0.28", features = ["ssl-vendored"] }
schema_registry_converter = { version = "3.1.0", features = ["easy", "json", "avro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
tokio-util = "0.6.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.3"

#deltalake = { version = "0.16.5", features = ["arrow", "json", "parquet"], optional = true }
# datafusion feature is required for writer version 2
deltalake-core = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["json", "datafusion"]}
deltalake-aws = { git = "https://github.com/delta-io/delta-rs", branch = "main", optional = true }
deltalake-azure = { git = "https://github.com/delta-io/delta-rs", branch = "main", optional = true }

# s3 feature enabled
dynamodb_lock = { version = "0.6.0", optional = true }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"], optional = true }
rusoto_credential = { version = "0.47", optional = true }
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"], optional = true }

# sentry
sentry = { version = "0.23.0", optional = true }

# azure feature enabled, mostly used for tests
azure_core = { version = "0.18.0", optional = true }
azure_storage = { version = "0.18.0", optional = true }
azure_storage_blobs = { version = "0.18.0", optional = true }

[features]
default = []
sentry-ext = ["sentry"]
dynamic-linking = [ "rdkafka/dynamic-linking" ]
azure = [
    "deltalake-azure",
    "azure_core",
    "azure_storage",
    "azure_storage_blobs"
]
s3 = [
    "deltalake-aws",
    "dynamodb_lock",
    "rusoto_core",
    "rusoto_credential",
    "rusoto_s3",
]

[dev-dependencies]
utime = "0.3"
serial_test = "*"
tempfile = "3"
time = "0.3.20"

[profile.release]
lto = true
