[package]
name = "kafka-delta-ingest"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>", "Christian Williams <christianw@scribd.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
apache-avro = "^0.14"
base64 = "0.13"
bytes = "1"
chrono = "0.4.31"
clap = { version = "4", features = ["color", "env"] }
dipstick = "0.9"
env_logger = "0"
futures = "0.3"
jmespatch = { version = "0.3", features = ["sync"] }
lazy_static = "1"
log = "0"
maplit = "1"
rdkafka = { version = "0.28", features = ["ssl-vendored"] }
schema_registry_converter = { version = "3.1.0", features = ["easy", "json", "avro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["fs"] }
tokio-util = "0.6.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.3"

# datafusion feature is required for writer version 2
deltalake-core = { version = "~0.18.1", features = ["json", "datafusion"]}
deltalake-aws = { version = "~0.1.2", optional = true }
deltalake-azure = { version = "~0.1.3", optional = true }

# s3 feature enabled, helps for locking interactions with DLQ
dynamodb_lock = { version = "0.6.0", optional = true }
# sentry
sentry = { version = "0.23.0", optional = true }

[features]
default = []
sentry-ext = ["sentry"]
dynamic-linking = [ "rdkafka/dynamic-linking" ]
azure = [
    "deltalake-azure",
]
s3 = [
    "deltalake-aws",
    "dynamodb_lock",
]

[dev-dependencies]
azure_core = { version = "0.18.0" }
azure_storage = { version = "0.18.0" }
azure_storage_blobs = { version = "0.18.0" }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"]}
rusoto_credential = { version = "0.47"}
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"]}
serial_test = "*"
tempfile = "3"
time = "0.3.20"
utime = "0.3"

[profile.release]
lto = true
